crates/solidity-v2/testing/snapshots/binder_output/scoping/redeclared_locals/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Identifier already declared.
   ╭─[input.sol:5:14]
   │
 5 │         uint x = 2;
   │              ┬  
   │              ╰── Error occurred here.
───╯

------------------------------------------------------------------------

Definitions (5):
- Def: #1 ["Test" @ input.sol:1:10] (contract)
- Def: #2 ["test" @ input.sol:2:14] (function, type: function () returns uint256)
- Def: #3 ["x" @ input.sol:3:14] (variable, type: uint256)
- Def: #4 ["y" @ input.sol:4:14] (variable, type: uint256)
- Def: #5 ["x" @ input.sol:5:14] (variable, type: uint256)

------------------------------------------------------------------------

References (3):
- Ref: ["x" @ input.sol:4:18] -> #3
- Ref: ["x" @ input.sol:6:16] -> #5
- Ref: ["y" @ input.sol:6:20] -> #4

------------------------------------------------------------------------

Unbound identifiers (0):

------------------------------------------------------------------------

Bindings: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 2 │     function test() public pure returns (uint) {
   │              ──┬─  
   │                ╰─── name: 2
 3 │         uint x = 1;
   │              ┬  
   │              ╰── name: 3
 4 │         uint y = x;
   │              ┬   ┬  
   │              ╰────── name: 4
   │                  │  
   │                  ╰── ref: 3
 5 │         uint x = 2;
   │              ┬  
   │              ╰── name: 5
 6 │         return x + y;
   │                ┬   ┬  
   │                ╰────── ref: 5
   │                    │  
   │                    ╰── ref: 4
───╯
